# django_db_only

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_name}}/scripts/: manage.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: settings.py  urls.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/models/: __init__.py  admin.py  example.py
